packages/next-swc/crates/core/tests/errors/next-font-downloaders/options-object/output.js
import '@next/google-fonts?{"font":"ABeeZee"}';
import i2 from '@next/google-fonts?{"font":"ABeeZee"}';
import '@next/google-fonts?{"font":"ABeeZee"}';
import i4 from '@next/google-fonts?{"font":"ABeeZee"}';
fn({
    ['variant']: '400'
});
const i1 = fn({
    10: 'hello'
});
fn({
    variant: [
        ...[],
        'hello'
    ]
});
const i3 = fn({
    variant: [
        ...[],
        'hello'
    ]
});
